--- a/templates/components/player_base.html
+++ b/templates/components/player_base.html
@@ -89,9 +89,9 @@
         <span class="icon icon-full"></span>
         <span>Full</span>
       </button>
-      <button id="toggleListBtn" class="modern-btn modern-btn-outline">
-        <span class="icon icon-list"></span>
-        <span>Playlist</span>
+      <button id="toggleLayoutBtn" class="modern-btn modern-btn-outline" title="Toggle playlist layout (Hidden/Under/Right)">
+        <span class="icon icon-layout"></span>
+        <span>Playlist: Right</span>
       </button>
     </div>
     
